feat(db): Add PostgreSQL reset script and update application DB name
Introduces reset-db.sh for easy management of the local PostgreSQL Docker container (postgres-erucli) and database (erucli).
Updates application.yml to connect to the newly configured erucli database.

Refactors FlowFactory and BalanceSaveFlowParam by simplifying lambda syntax and adopting Java 16+ toList() for stream collectors.
Removes an outdated CI badge from README.md and updates the todo-list to reflect the completed Balance flow refactoring.