@@ -1,23 +1,22 @@
 package com.onurbcd.eruservice.model;
 
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import org.springframework.lang.Nullable;
-import org.springframework.shell.component.flow.SelectItem;
-import org.springframework.shell.standard.ShellOption;
-
 import com.onurbcd.eruservice.dto.balance.BalanceDto;
 import com.onurbcd.eruservice.enums.BalanceType;
 import com.onurbcd.eruservice.util.DateUtil;
 import com.onurbcd.eruservice.util.EnumUtil;
 import com.onurbcd.eruservice.util.FileUtil;
-
 import lombok.Builder;
 import lombok.Getter;
+import org.springframework.lang.Nullable;
+import org.springframework.shell.component.flow.SelectItem;
+import org.springframework.shell.standard.ShellOption;
+
+import java.math.BigDecimal;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Builder
 @Getter
@@ -38,12 +37,12 @@ public class BalanceSaveFlowParam {
     private List<String> linkedDocumentsDefault;
 
     public static BalanceSaveFlowParam of(@Nullable BalanceDto balance, List<SelectItem> sourceItems,
-            List<SelectItem> categoryItems, String filesPath) {
+                                          List<SelectItem> categoryItems, String filesPath) {
 
         var linkedIds = Optional.ofNullable(balance)
                 .map(BalanceDto::getDocumentsIds)
                 .map(ids -> ids.stream().map(UUID::toString).collect(Collectors.toSet()))
-                .orElse(java.util.Collections.emptySet());
+                .orElse(Collections.emptySet());
 
         return BalanceSaveFlowParam
                 .builder()
@@ -68,11 +67,11 @@ public class BalanceSaveFlowParam {
                                     var id = doc.getId().toString();
                                     return SelectItem.of(doc.getName(), id, true, linkedIds.contains(id));
                                 })
-                                .collect(Collectors.toList()))
+                                .toList())
                         .orElse(List.of()))
                 .linkedDocumentsDefault(Optional.ofNullable(balance)
                         .map(BalanceDto::getDocumentsIds)
-                        .map(ids -> ids.stream().map(UUID::toString).collect(Collectors.toList()))
+                        .map(ids -> ids.stream().map(UUID::toString).toList())
                         .orElse(List.of()))
                 .build();
     }
